一次元空间内存泄露分析记录